# MaxMinFinder

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml  rust.yml
docs/: crates.js  index.html  settings.html  source-files.js
docs/doc/: help.html  index.html  search-index.js  settings.html  source-files.js
docs/doc/implementors/clap/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js
docs/doc/implementors/core/fmt/: trait.Debug.js
docs/doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/doc/max/: all.html  fn.find_max_double.html  fn.main.html  fn.retrive_clip.html  fn.retrive_file.html  fn.retrive_stdin.html  index.html  sidebar-items.js  struct.Args.html
docs/doc/max/parser/: fn.parse.html  index.html  sidebar-items.js  struct.FloatIter.html
docs/doc/min/: all.html  fn.find_min_double.html  fn.main.html  fn.retrive_clip.html  fn.retrive_file.html  fn.retrive_stdin.html  index.html  sidebar-items.js  struct.Args.html
docs/doc/min/parser/: fn.parse.html  index.html  struct.FloatIter.html
docs/doc/src/max/: max.rs.html
docs/doc/src/max/parser/: mod.rs.html
docs/doc/src/min/: min.rs.html
docs/doc/src/min/parser/: mod.rs.html
docs/implementors/core/marker/: trait.Send.js  trait.Sync.js
docs/max/: fn.main.html  fn.retrive_clip.html  fn.retrive_file.html  struct.Args.html
docs/min/: all.html  fn.retrive_clip.html  fn.retrive_stdin.html  index.html
docs/src/max/: max.rs.html
src/: max.rs  min.rs
src/parser/: mod.rs
(+4 files in other folders)
